--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <scrip source="main"></scrip>
+        <body>
+        <script source="main.js"></script>
+        </body>
     </head>
-    <body></body>
 </html>
